objects/CMPL123QMS__Impacted_Lot__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Action_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Action_Created_for_Return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Created for Return?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Action_Created_for_Rework__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Created for Rework?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Action_Created_for_Scrap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Created for Scrap?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Actions_Taken__c</fullName>
        <label>Actions Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Conforming_Qty_Comment__c</fullName>
        <label>Conforming Qty Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Conforming_Qty__c</fullName>
        <label>Conforming Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Disposition_Status_Flag__c</fullName>
        <formula>IF( CMPL123QMS__Disposition_Status__c ="Match", 
IMAGE("/resource/CMPL123QMS__GreenDot", "Green", 10, 10),
IF( CMPL123QMS__Disposition_Status__c = "Under",
IMAGE("/resource/CMPL123QMS__YellowDot", "yellow", 10, 10),
IMAGE("/resource/CMPL123QMS__RedDot", "Red", 10, 10)
))</formula>
        <inlineHelpText>Visual indicator of the disposition status. Red means no disposition quantities are recorded, Yellow means not all quantities recorded, and Green means all quantities are recorded.</inlineHelpText>
        <label>Disposition Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Disposition_Status__c</fullName>
        <formula>IF( CMPL123QMS__Total_Disposition_Qty__c &lt;= 0,"Not Started",
IF( CMPL123QMS__Total_Disposition_Qty__c &lt;  CMPL123QMS__Lot_Qty__c, "Under",
IF( CMPL123QMS__Total_Disposition_Qty__c =  CMPL123QMS__Lot_Qty__c, "Match",
NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether all of the Lot has been accounted for in the related lot disposition records. A status of "Over" indicates more product has been dispositioned than is part of the Lot.</inlineHelpText>
        <label>Disposition Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Disposition__c</fullName>
        <label>Disposition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conforming</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Return to Supplier</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
                <value>
                    <fullName>Use As Is</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Lot_Qty_UOM__c</fullName>
        <label>Lot Qty UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Lot_Qty__c</fullName>
        <label>Lot Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <referenceTo>CMPL123QMS__Material__c</referenceTo>
        <relationshipLabel>Impacted Lots</relationshipLabel>
        <relationshipName>Impacted_Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Non_Conformance__c</fullName>
        <label>Non Conformance</label>
        <referenceTo>CMPL123QMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>Impacted Lots</relationshipLabel>
        <relationshipName>Impacted_Lots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Observations__c</fullName>
        <label>Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>Impacted Lots</relationshipLabel>
        <relationshipName>Impacted_Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Recall_Qty_Comment__c</fullName>
        <label>Recall Qty Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Recall_Qty__c</fullName>
        <label>Recall Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Return_Qty_Comment__c</fullName>
        <label>Return Qty Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Return_To_Supplier_Qty__c</fullName>
        <label>Return To Supplier Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Rework_Qty_Comment__c</fullName>
        <label>Rework Qty Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Rework_Qty__c</fullName>
        <label>Rework Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Scrap_Qty_Comment__c</fullName>
        <label>Scrap Qty Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Scrap_Qty__c</fullName>
        <label>Scrap Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Total_Disposition_Qty__c</fullName>
        <formula>CMPL123QMS__Rework_Qty__c + CMPL123QMS__Scrap_Qty__c + CMPL123QMS__Use_As_Is_Qty__c + CMPL123QMS__Return_To_Supplier_Qty__c + CMPL123QMS__Conforming_Qty__c + CMPL123QMS__Recall_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Disposition Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Use_As_Is_Qty_Comment__c</fullName>
        <label>Use As Is Qty Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Use_As_Is_Qty__c</fullName>
        <label>Use As Is Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Impacted Lot</label>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{00000}</displayFormat>
        <label>Impacted Lot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impacted Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Prevent_Dispo_of_Too_Much_Qty</fullName>
        <active>true</active>
        <description>Prevent user from entering disposition for more quantity that the total lot quantity.</description>
        <errorConditionFormula>IF( CMPL123QMS__Total_Disposition_Qty__c &gt;  CMPL123QMS__Lot_Qty__c, TRUE,FALSE)</errorConditionFormula>
        <errorMessage>You’ve entered more Disposition Quantity than the Total Quantity for this Lot. Check your Dispositions Quantities and update them accordingly.</errorMessage>
    </validationRules>
</CustomObject>